# cakeml_libs

./: .licenseignore  Findcakeml_libs.cmake  README.md  libcakeml_helpers.cmake
cakeml_libraries/libvirtqueue/: README.md  virtqueueScript.sml
cakeml_libraries/seL4/: seL4.c  seL4Script.sml
cakeml_libraries/utils/: utils.c  utilsScript.sml
libsel4_cakeml/: CMakeLists.txt  gen_cakeml_invocations.py
libsel4_cakeml/templates/: invocation.sml  seL4InvocationsScript.sml
meta_utils/: Holmakefile  camkesUtils.sml  camkesUtilsLib.sml  meta_utils.cmake
